feat(upgrade): say how to re-register the service for --tomcat-dir; warn on missing --add-opens
ADR-0026 amendment (issue #109): the service switch stays the operator's.
The --tomcat-dir refusal's remediation now carries the platform's own
re-registration steps for the configured kind with the real paths and
service name (ServiceSwitch: Windows service, systemd unit, catalina
script, ctlscript), the manual plan summary carries the same for this
operating system, and the operator guide lists all four.

The plan warns, and doctor's tomcat item is WARN, when a Tomcat of major
10 or later has no --add-opens in bin/setenv.sh|bat (TomcatJavaOpts;
installation guide 10.1 pp.84-86). Advice only: the vendor's bundled
installer starts 10.0.0 on Tomcat 10.1.41 and Java 17 without them.

Closes #109.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>